# amb

./: .gitignore  LICENSE  README.md  env.example  package-lock.json  package.json  truffle-config.js
contracts/: CounterN1.sol  CounterN2.sol
migrations/: 1_deploy_setup_contracts.js
relayer/: Cargo.toml  env.relayer.example
relayer/src/: main.rs  settings.rs
scripts/: mumbai.mjs
test/: mumbai_tests.js
