[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.11"
serde_derive = "1.0.8"
serde = "1.0.8"
serde_json = "1.0.79"
clap = { version = "3.1.6", features = ["derive"] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }